--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>云计算作业</title>
     <style media="screen">
         #chart{
             height: 500px;
