--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -216,7 +216,7 @@
 <select id="sel">
     <option>请选择</option>
 </select>
-请选择：<input type="button" onclick="add()" value="添加论文"/><br/>
+<input type="button" onclick="add()" value="添加论文"/><br/>
 已选择论文：<input type="text" readonly="readonly" id="pdfName" size = "50"/><br/>
 <input type="button" onclick="get()" value="开始解析"/>
 <br/>
