--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -36,15 +36,14 @@
     }
     function start(json) {
         // for local test
-        var json =
-                '{"nodes":[{"category":0,"name":0,"value":5,"label":"李佳林"},{"category":"0","name":"1","value":"5","label":"郎世权"}],"links":[{"source":0,"target":1,"value":2,"label":"引用"},{"source":1,"target":0,"value":2,"label":"引用"}]}';
+//        var json = '{"nodes":[{"category":0,"name":0,"value":5,"label":"李佳林"},{"category":"0","name":"1","value":"5","label":"郎世权"}],"links":[{"source":0,"target":1,"value":2,"label":"引用"},{"source":1,"target":0,"value":2,"label":"引用"}]}';
         // 基于准备好的dom，初始化echarts实例
         var chart = echarts.init(document.getElementById('chart'));
 
         //准备好数据
         //以下为节点数据，每一个{}里面为一个节点，category（该节点类别），name（关系连接的关键字，可以理解为键值中的键，可为数字）
         //value(节点的值，可以设置节点半径与该值的关系)，label（该字段是我用来显示该节点标签的，可以改名），大家也可以自己设置其他字段
-        var graph = eval('(' + json + ')');//数据
+        var graph = json;//数据
         console.log(graph);
 //        graph.nodes = [
 //            {category: 0, name: 0, value: 5, label: '李佳林'},
@@ -217,7 +216,7 @@
     <option>请选择</option>
 </select>
 <input type="button" onclick="add()" value="添加论文"/><br/>
-已选择论文：<input type="text" readonly="readonly" id="pdfName" size = "50"/><br/>
+已选择论文：<input type="text" readonly="readonly" id="pdfName" size="50"/><br/>
 <input type="button" onclick="get()" value="开始解析"/>
 <br/>
 <hr/>
