--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -155,7 +155,7 @@
                 {
                     name: '引用关系',//系列名称
                     type: 'graph',//图表类型
-                    layout: 'circular',//echarts3的变化，force是力向图，circular是和弦图
+                    layout: 'force',//echarts3的变化，force是力向图，circular是和弦图
                     draggable: true,//指示节点是否可以拖动
 
 
