--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -34,63 +34,25 @@
             pdfs.val(pdfsValue + selValue + ";");
         }
     }
+    function clearVal() {
+        var pdfs = $("#pdfName");
+        pdfs.val("");
+    }
+
     function start(json) {
         // for local test
-//        var json = '{"nodes":[{"category":0,"name":0,"value":5,"label":"李佳林"},{"category":"0","name":"1","value":"5","label":"郎世权"}],"links":[{"source":0,"target":1,"value":2,"label":"引用"},{"source":1,"target":0,"value":2,"label":"引用"}]}';
+        // var json = '{"nodes":[{"category":0,"name":0,"value":5,"label":"李佳林"},{"category":"0","name":"1","value":"5","label":"郎世权"}],"links":[{"source":0,"target":1,"value":2,"label":"引用"},{"source":1,"target":0,"value":2,"label":"引用"}]}';
         // 基于准备好的dom，初始化echarts实例
         var chart = echarts.init(document.getElementById('chart'));
-
-        //准备好数据
-        //以下为节点数据，每一个{}里面为一个节点，category（该节点类别），name（关系连接的关键字，可以理解为键值中的键，可为数字）
-        //value(节点的值，可以设置节点半径与该值的关系)，label（该字段是我用来显示该节点标签的，可以改名），大家也可以自己设置其他字段
+        console.log(json);
+        // 准备好数据
+        // 以下为节点数据，每一个{}里面为一个节点，category（该节点类别），name（关系连接的关键字，可以理解为键值中的键，可为数字）
+        // value(节点的值，可以设置节点半径与该值的关系)，label（该字段是我用来显示该节点标签的，可以改名），大家也可以自己设置其他字段
         var graph = json;//数据
         console.log(graph);
-//        graph.nodes = [
-//            {category: 0, name: 0, value: 5, label: '李佳林'},
-//            {category: 0, name: 1, value: 2, label: '张成'},
-//            {category: 0, name: 2, value: 2, label: '乔峙'},
-//            {category: 0, name: 3, value: 2, label: '王健超'},
-//
-//            {category: 1, name: 4, value: 2, label: '李娅'},
-//            {category: 1, name: 5, value: 2, label: '林芮竹'},
-//            {category: 1, name: 6, value: 2, label: '杜建薇'},
-//            {category: 1, name: 7, value: 2, label: '赵心扬'},
-//
-//            {category: 2, name: 8, value: 2, label: '郎世权'},
-//            {category: 2, name: 9, value: 2, label: '马铭泽'},
-//            {category: 2, name: 10, value: 2, label: '李文超'},
-//            {category: 2, name: 11, value: 2, label: '魏闻'},
-//        ];
-//        //以下为连线关系数据，每一个{}里面为一个关系，source（起点，对应上面的name），target（终点，对应上面的name）
-//        //value(起点到终点的距离，值越大，权重越大，距离越短)
-//        graph.links = [
-//            {source: 0, target: 1, value: 5, label: '室友'},
-//            {source: 0, target: 2, value: 2, label: '室友'},
-//            {source: 0, target: 3, value: 1, label: '室友'},
-//            {source: 1, target: 2, value: 2, label: '室友'},
-//            {source: 1, target: 3, value: 3, label: '室友'},
-//            {source: 2, target: 3, value: 3, label: '室友'},
-//            {source: 6, target: 7, value: 1, label: '同班'},
-//
-//            {source: 0, target: 5, value: 6, label: '恋人'},
-//            {source: 2, target: 4, value: 1, label: '恋人'},
-//            {source: 1, target: 6, value: 1, label: '暗恋'},
-//            {source: 7, target: 2, value: 1, label: '暗恋'},
-//            {source: 1, target: 7, value: 1, label: '讨厌'},
-//
-//            {source: 0, target: 8, value: 1, label: '师徒'},
-//            {source: 1, target: 9, value: 1, label: '父子'},
-//            {source: 10, target: 9, value: 1, label: '父子'},
-//            {source: 2, target: 10, value: 1, label: '老乡'},
-//            {source: 0, target: 6, value: 1, label: '老乡'},
-//            {source: 0, target: 11, value: 1, label: '战友'},
-//            {source: 2, target: 11, value: 1, label: '战友'},
-//
-//        ];
-        //categories为node节点分类，categoriesshort为显示图例，后者比前者短，可以使得图例中没有主干人物
+        // categories为node节点分类，categoriesshort为显示图例，后者比前者短，可以使得图例中没有主干人物
         graph.categories = [{name: '请查看'}];
         graph.categoriesshort = [{name: '请查看'}];
-
 
         // 设置关系图节点标记的大小
         graph.nodes.forEach(function (node) {
@@ -102,7 +64,7 @@
 
 
             title: {
-                text: '引用关系图',//标题
+                text: '引用关系网络图',//标题
                 subtext: '软件一班六小只',//标题副标题
                 top: 'top',//相对在y轴上的位置
                 left: 'center'//相对在x轴上的位置
@@ -153,7 +115,7 @@
             //sereis的数据: 用于设置图表数据之用
             series: [
                 {
-                    name: '引用关系',//系列名称
+                    name: '人际关系',//系列名称
                     type: 'graph',//图表类型
                     layout: 'force',//echarts3的变化，force是力向图，circular是和弦图
                     draggable: true,//指示节点是否可以拖动
@@ -216,7 +178,9 @@
     <option>请选择</option>
 </select>
 <input type="button" onclick="add()" value="添加论文"/><br/>
-已选择论文：<input type="text" readonly="readonly" id="pdfName" size="50"/><br/>
+已选择论文：<input type="text" readonly="readonly" id="pdfName" size="50"/>
+<input type="button" onclick="clearVal()" value="清空"/>
+<br/>
 <input type="button" onclick="get()" value="开始解析"/>
 <br/>
 <hr/>
